--- a/assignments/labs/01-intro-and-truth-tables.ipynb
+++ b/assignments/labs/01-intro-and-truth-tables.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/PhilChodrow/CSCI-0200/blob/main/assignments/labs/01-intro-and-truth-tables.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -267,7 +267,7 @@
         "3. $\\lnot p \\land q$\n",
         "4. $\\lnot (p \\land \\lnot q)$\n",
         "\n",
-        "Two logical expressions are *logically equivalent* if they have exactly the same truth table. Which of these expressions are logically equivalent to which other expressions?\n",
+        "Two logical expressions are *logically equivalent* if they have exactly the same final column in their truth tables. Which of these expressions are logically equivalent to which other expressions?\n",
         "\n",
         "*Note*: You will want to use Python constructions like:\n",
         "\n",
@@ -401,11 +401,12 @@
         "\n",
         "Your friend (sadly not in the class) asks you what you did in your first CSCI 0200 lab. Write a paragraph for your friend in which you describe what you did. Please include responses to the following:   \n",
         "\n",
-        "1. Big picture, how would you describe what this lab was about?\n",
-        "2. What are three skills you learned or practiced in this lab?\n",
-        "3. What is a way in which your group supported your learning during this lab?\n",
-        "4. What's something you found interesting, stimulating, or fun about this lab?\n",
-        "5. What's something you found challenging, disappointing, or frustrating about this lab?"
+        "1. Approximately how long did you spend completing this lab, including your time in-class on Friday?\n",
+        "2. Big picture, how would you describe what this lab was about?\n",
+        "3. What are three skills you learned or practiced in this lab?\n",
+        "4. What is a way in which your group supported your learning during this lab?\n",
+        "5. What's something you found interesting, stimulating, or fun about this lab?\n",
+        "6. What's something you found challenging, disappointing, or frustrating about this lab?"
       ]
     },
     {
@@ -426,6 +427,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "teaching",
       "language": "python",
@@ -443,11 +448,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.8.13"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
