--- a/content/modules/11-logic-2/prep.qmd
+++ b/content/modules/11-logic-2/prep.qmd
@@ -18,7 +18,7 @@ title: "Implication, Inverse, Converse, and Contrapositive"
 # Reading (40 mins)
 
 - [DMOI 3.1](https://discrete.openmathbooks.org/dmoi3/sec_propositional.html) through Example 3.1.5. 
-- [Privilege is the Inverse of Discrimination](https://medium.com/@davestagner/privilege-is-the-inverse-of-discrimination-334d0c7f4fbd) (***Note**: I think this is a helpful piece, but be aware that it uses problematically simple binaries in race and gender.*)
+<!-- - [Privilege is the Inverse of Discrimination](https://medium.com/@davestagner/privilege-is-the-inverse-of-discrimination-334d0c7f4fbd) (***Note**: I think this is a helpful piece, but be aware that it uses problematically simple binaries in race and gender.*) -->
  
 ## Optional Reading
 
