--- a/docs/assignments/labs/02-inclusion-exclusion.ipynb
+++ b/docs/assignments/labs/02-inclusion-exclusion.ipynb
@@ -91,12 +91,13 @@
     "\n",
     "$\\lvert A \\cup B \\cup C\\rvert = \\lvert A \\cup D\\rvert\\;.$\n",
     "\n",
-    "First, apply the two-set inclusion-exclusion formula to the righthand side of this expression. Then, apply the two-set inclusion exclusion formula *again* to simplify the expressions that result. \n",
+    "- First, apply the two-set inclusion-exclusion formula to the righthand side of this expression. \n",
+    "- Then, apply the two-set inclusion exclusion formula *again* to simplify the expressions that result. \n",
     "\n",
     "Write your derivation (a computation leading to the desired formula) on the whiteboard. It would be good idea to take a picture of it once you're done. \n",
     "\n",
     "### (*After Lab*)\n",
-    "\n",
+    " \n",
     "Type your derivation below. If you'd like to write sequential equations, which are very suitable for calculations like this one, click into this Markdown cell to see how I did this: \n",
     "\n",
     "$$\n",
@@ -120,12 +121,14 @@
    "source": [
     "## Part D \n",
     "\n",
+    "Now let's test our mathematical theory against computational experiments. \n",
+    "\n",
     "The following function will compute the size of a union of any number of provided sets. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +154,7 @@
        "6"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,12 +171,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we're going to write a function that can compute the size of a union using an inclusion-exclusion formula. Here is a function that, when one or more sets are passed as arguments, *prints* all possible combinations of those sets. Then, it returns `0`. "
+    "Now we're going to write a function that can compute the size of a union using using a different method, using inclusion-exclusion. \n",
+    "\n",
+    "To get you started on this function, I've populated a function that, when one or more sets are passed as arguments, *prints* all possible combinations of those sets. Then, it returns `0`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +325,7 @@
     "\n",
     "Write a paragraph in response to the following prompt: \n",
     "\n",
-    "1. Approximately how long did it take you to complete this lab, **including Friday's lab time**? \n",
+    "1. Approximately how long did it take you to complete this lab, **including Friday's in-class lab time**? \n",
     "2. Big picture, how would you describe what this lab was about?\n",
     "3. What are three skills you learned or practiced in this lab?\n",
     "4. What is a way in which your group supported your learning during this lab?\n",
@@ -345,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
