--- a/assignments/labs/01-intro-and-truth-tables.ipynb
+++ b/assignments/labs/01-intro-and-truth-tables.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "# Lab 1: Mathematical Writing and Truth Tables\n",
         "\n",
-        "- [Your name]\n",
+        "- [Your name] \n",
         "- [The name of one of your group members]\n",
         "- [The name of your other group member]"
       ]
@@ -31,9 +31,17 @@
       "source": [
         "**Learning Objectives**:\n",
         "\n",
-        "In this lab, you'll practice writing mathematical formulas using $\\LaTeX$ syntax. You'll also translate back and forth between logical mathematical expressions and Python code.\n",
+        "In this lab, \n",
         "\n",
-        "*Note: This lab is different! During lab time, I will usually expect you **not** to work on your laptops, and instead work on whiteboards. Today, because typing mathematics is part of the learning goal, I want to make sure you have some time to practice that in class.*"
+        "- You'll practice writing mathematical formulas using $\\LaTeX$ syntax. \n",
+        "- You'll compare the complexity of different equivalent logical expressions. \n",
+        "- You'll translate back and forth between logical mathematical expressions and Python code.\n",
+        "\n",
+        "*Note: This lab is different! During lab time, I will usually expect you **not** to work on your laptops, and instead work on whiteboards. Today, because typing mathematics is part of the learning goal, I want to make sure you have some time to practice that in class.*\n",
+        "\n",
+        "**Working in Groups**: \n",
+        "\n",
+        "*During class, please make sure that every group member has completed and understood a part before moving on!*"
       ]
     },
     {
@@ -74,7 +82,7 @@
         "\n",
         "A *group norm* is a shared, mutually-agreed upon expectation to which all group members will be held. In this part of the activity, you'll agree on several group norms and write them using Markdown formatting.\n",
         "\n",
-        "First, you're going to copy our core group norms. Make a new Markdown cell directly below this one. In that cell, use Markdown to replicate the following block of text\n",
+        "First, you're going to copy our core group norms. Make a new Markdown cell directly below this one. In that cell, use Markdown to replicate the following block of text.\n",
         "\n",
         "![](https://github.com/PhilChodrow/CSCI-0200/blob/main/assets/img/pics/norms.png?raw=1)\n",
         "\n",
@@ -147,7 +155,7 @@
         "1. $\\lnot (p \\land q)$\n",
         "2. $\\lnot p \\lor \\lnot q$\n",
         "\n",
-        "It's ok to write your truth tables \"casually\" using Markdown, but you can also structure them as *tables* using some more advanced $\\LaTeX$ syntax. Double click into this markdown cell to see how I created the beginnings of a truth table:\n",
+        "It's ok to write your truth tables \"casually\" using Markdown, but OPTIONALLY you can also structure them as *tables* using some more advanced $\\LaTeX$ syntax. Double click into this markdown cell to see how I created the beginnings of a truth table:\n",
         "\n",
         "$$\n",
         "\\begin{array}{c|c|c}\n",
@@ -170,11 +178,116 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Part D: The Sum-Of-Products Method\n",
+        "\n",
+        " Let's suppose that we want to find a logical expression that represents this truth table: \n",
+        "\n",
+        "$$\n",
+        "\\begin{array}{c|c|c}\n",
+        "p & q & p \\lor q \\\\\n",
+        "\\hline\n",
+        "T & T & F \\\\\n",
+        "T & F & T \\\\\n",
+        "F & T & F \\\\\n",
+        "F & F & T \\\\\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "The *sum-of-products method* is an algorithm that allows us to do this. In the sum-of-products method, we read the truth-table line-by-line. For each line with a $T$ in the final logical expression, we add a term in which each of the individual variables are negated if they appear as an $F$ in that row, and  joined by a logical \"and\" $\\land$. Each term is joined by a logical \"or\" $\\lor$. So, in our truth table above: \n",
+        "\n",
+        "1. The first line ends with an $F$ and so we don't write a term. \n",
+        "2. The second line ends with a $T$, and so we need to include it. $p$ will appear as-is, while $q$ needs to be negated because there is an $F$ in its column. So, our term for this line is $p\\land \\lnot q$. \n",
+        "3. The third line ends with an $F$ and so we don't write a term. \n",
+        "4. The fourth line ends with a $T$ and so we need to include it. Both $p$ and $q$ have $F$ in their column this time, and so our term is $\\lnot p \\land \\lnot q$. \n",
+        "\n",
+        "To finish the representation, we join all our terms with $\\lor$, and so our final expression representing this truth table is: \n",
+        "\n",
+        "$$\n",
+        "(p\\land \\lnot q) \\lor (\\lnot p \\land \\lnot q)\\;.\n",
+        "$$\n",
+        "\n",
+        "***Note***: *The term \"sum-of-products\" method comes from boolean algebra, an alternative notation for propositional logic. In boolean algebra, \"$\\lor$\" is written \"$+$\" and $\\land$ is written as a multiplication of variables. Negation is written with a $\\bar{x}$ over a variable $x$. So, in boolean algebra, we would represent this expression as $x\\bar{y} + \\bar{x}\\bar{y}$: a sum of products.*  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercise 5.1 \n",
+        "\n",
+        "The sum-of-products method is not always very efficient! Write a much simpler logical expression with the same truth table as shown in the example above. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[your simplified logical expression here]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercise 5.2 \n",
+        "\n",
+        "Make a truth table for the logical expression \n",
+        "\n",
+        "$$\n",
+        "\\lnot (p \\lor \\lnot q) \\land (\\lnot q \\land r)\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[Your truth table]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercise 5.3\n",
+        "\n",
+        "Using your truth table for the expression above, write down the representation derived from the sum-of-products method. \n",
+        "\n",
+        "*Note that there are three variables, so your truth table should have 8 rows*. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[your sum-of-products representation here]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercise 5.4\n",
+        "\n",
+        "Suppose that we are designing a circuit which needs to perform a logical operation. Each symbol $\\lnot$, $\\land$, $\\lor$ corresponds to a \"gate\" that we'll include in our circuit. We can construct our circuit using either the given expression from Exercise 5.2 or the sum-of-products expression that you found in exercise 5.3. How many gates would be needed in each case? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[your response here!]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0ZhFouVhOYXD"
       },
       "source": [
-        "# Part D: From Logic to Python\n",
+        "# Part E: From Logic to Python\n",
         "\n",
         "Here is a Python function that, given two Boolean arguments $p$ and $q$, returns $p \\land q$:"
       ]
@@ -197,7 +310,7 @@
         "id": "StIbA_KQOYXE"
       },
       "source": [
-        "Here's a sample function that computes a truth table for a user-supplied logical function `f`:"
+        "Here's a sample function that computes a truth table for a user-supplied logical function `f` that accepts two logical arguments:"
       ]
     },
     {
@@ -258,7 +371,7 @@
         "id": "ie-UOFDHOYXF"
       },
       "source": [
-        "## Exercise 5\n",
+        "## Exercise 6\n",
         "\n",
         "Write Python functions which implement the following logical operations. For each one, use the `truth_table` function above to display the truth table of the logical expression:\n",
         "\n",
@@ -284,7 +397,7 @@
       },
       "outputs": [],
       "source": [
-        "# Exercise 5.1: implement your function and call truth_table to display"
+        "# Exercise 6.1: implement your function and call truth_table to display"
       ]
     },
     {
@@ -295,7 +408,7 @@
       },
       "outputs": [],
       "source": [
-        "# Exercise 5.2: implement your function and call truth_table to display"
+        "# Exercise 6.2: implement your function and call truth_table to display"
       ]
     },
     {
@@ -306,7 +419,7 @@
       },
       "outputs": [],
       "source": [
-        "# Exercise 5.3: implement your function and call truth_table to display"
+        "# Exercise 6.3: implement your function and call truth_table to display"
       ]
     },
     {
@@ -317,7 +430,7 @@
       },
       "outputs": [],
       "source": [
-        "# Exercise 5.4: implement your function and call truth_table to display"
+        "# Exercise 6.4: implement your function and call truth_table to display"
       ]
     },
     {
@@ -326,7 +439,7 @@
         "id": "uDqd4z1FOYXG"
       },
       "source": [
-        "Exercise 5.5: which of these expressions are logically equivalent to which other expressions?\n",
+        "Exercise 6.5: which of these expressions are logically equivalent to which other expressions?\n",
         "\n",
         "[*your response here*]"
       ]
@@ -337,7 +450,7 @@
         "id": "u2CP0tCQOYXG"
       },
       "source": [
-        "## Exercise 6\n",
+        "## Exercise 7\n",
         "\n",
         "Here are two Python functions that implement a logical operation with three arguments. For each one, write down the logical operation performed, using the symbols $\\lnot$, $\\lor$, and $\\land$. Then, answer the following questions:\n",
         "\n",
@@ -397,7 +510,7 @@
         "id": "8rTGJRBxOYXG"
       },
       "source": [
-        "# Part E: Reflection\n",
+        "# Part F: Reflection\n",
         "\n",
         "Your friend (sadly not in the class) asks you what you did in your first CSCI 0200 lab. Write a paragraph for your friend in which you describe what you did. Please include responses to the following:   \n",
         "\n",
@@ -415,7 +528,7 @@
         "id": "lGgp5MKEOYXG"
       },
       "source": [
-        "# Part F: Turn It In!\n",
+        "# Part G: Turn It In!\n",
         "\n",
         "To submit this lab, you need to turn it into a PDF. To do that:\n",
         "\n",
