--- a/assignments/labs/01-intro-and-truth-tables.ipynb
+++ b/assignments/labs/01-intro-and-truth-tables.ipynb
@@ -233,6 +233,7 @@
       "source": [
         "## Exercise 5.2 \n",
         "\n",
+        "$$\\require{cancel}$$\n",
         "\n",
         "~~Make a truth table for the logical expression~~\n",
         "\n",
