update prep, implement solutions

--- a/docs/assignments/labs/01-intro-and-truth-tables.ipynb
+++ b/docs/assignments/labs/01-intro-and-truth-tables.ipynb
@@ -186,7 +186,7 @@
         "\n",
         "$$\n",
         "\\begin{array}{c|c|c}\n",
-        "p & q & p \\lor q \\\\\n",
+        "p & q & ? \\\\\n",
         "\\hline\n",
         "T & T & F \\\\\n",
         "T & F & T \\\\\n",
@@ -233,10 +233,20 @@
       "source": [
         "## Exercise 5.2 \n",
         "\n",
-        "Make a truth table for the logical expression \n",
+        "$$\\require{cancel}$$\n",
+        "\n",
+        "~~Make a truth table for the logical expression~~\n",
         "\n",
         "$$\n",
-        "\\lnot (p \\lor \\lnot q) \\land (\\lnot q \\land r)\n",
+        "\\cancel{\\lnot (p \\lor \\lnot q) \\land (\\lnot q \\land r)}\n",
+        "$$\n",
+        "\n",
+        "**CORRECTION**: \n",
+        "\n",
+        "The truth table for this expression is not very interesting. Please instead use the expression \n",
+        "\n",
+        "$$\n",
+        "(p \\lor \\lnot q) \\land (\\lnot q \\land r)\n",
         "$$"
       ]
     },
