--- a/assignments/labs/02-inclusion-exclusion.ipynb
+++ b/assignments/labs/02-inclusion-exclusion.ipynb
@@ -19,16 +19,25 @@
     "\n",
     "**Learning Objectives**:\n",
     "\n",
-    "In this lab, you'll practice performing mathematical operations on sets. We're going to focus especially on the problem of computing the cardinality of a set that is formed from other sets. \n",
+    "- You will practice performing mathematical operations on sets, especially the cardinality of sets formed from other sets. \n",
+    "- You will continue to practice with writing mathematics and creating symbols with $\\LaTeX$. \n",
     "\n",
-    "On your own, you'll continue to practice with writing mathematics and creating symbols with $\\LaTeX$. "
+    "# Instructions\n",
+    "\n",
+    "In Parts A-C, **you should not be typing during the lab period**. You can use your device to look at the lab instructions and for quick checks, but now is not the time for typing. Instead, you should work with your group at your board or on your mini-boards on the specified problems. \n",
+    "\n",
+    "- Remember your group norms from Lab 1. \n",
+    "- Pass the marker often, *at minimum* twice in every Part. \n",
+    "- Every group member should take a picture before erasing anything. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part A (Refresher)\n",
+    "## Part A\n",
+    "\n",
+    "### Exercise A.1\n",
     "\n",
     "Draw a Venn diagram with two intersecting sets $A$ and $B$. By referring to your Venn diagram, write an explanation of the *inclusion-exclusion formula*: \n",
     "\n",
@@ -36,20 +45,36 @@
     "\\lvert A \\cup B \\rvert = \\lvert A \\rvert + \\lvert B \\rvert - \\lvert A \\cap B \\rvert. \n",
     "$$\n",
     "\n",
-    "You should write your explanation on the whiteboard. \n",
-    "\n",
-    "Take a picture of your Venn diagram and save it somewhere where you can find it again.\n",
+    "You should write your explanation on the whiteboard beside your diagram. Take a picture of your diagram and explanation and save it somewhere where you can find it again.\n",
     "\n",
     "### (*After Lab*)\n",
     "\n",
-    "Upload your Venn diagram in this notebook and refer to it when giving your explanation. \n"
+    "Upload your image in this notebook. Then, give a carefully edited, typed version of your explanation, using mathematical symbols as appropriate.  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[An image of your Venn Diagram]"
+    "[*YOUR ANSWER HERE: An image of your Venn Diagram followed by a carefully-written explanation. Your image show show your whiteboard explanation, but please edit and type your explanation here after the lab period.*]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise A.2\n",
+    "\n",
+    "Suppose that $U$ is the universal set, that $U$ is finite, and that $\\lvert U \\rvert = m$. Find a formula for $\\lvert\\bar{A} \\cap \\bar{B}\\rvert$ that uses the inclusion-exclusion formula. Your final formula **should not involve any set complement symbols like $\\bar{A}$. Write your derivation on the whiteboard and take a picture. \n",
+    "\n",
+    "*Hint*: There are several approaches. One way is to draw another Venn diagram that will allow you to convert $\\bar{A} \\cap \\bar{B}$ into an expression involving a union $\\cup$. Another way is to rearrange the terms of the inclusion-exclusion formula.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*[YOUR ANSWER HERE: An image of your derivation on the whiteboard. Then, a carefully-written, typed derivation using mathematical symbols as needed.]*"
    ]
   },
   {
@@ -58,9 +83,11 @@
    "source": [
     "## Part B\n",
     "\n",
-    "Draw a Venn diagram with *3* intersecting sets $A$, $B$, and $C$. Use your Venn diagram to conjecture an inclusion-exclusion formula for the expression $\\lvert A \\cup B \\cup C\\rvert$. You should explain your formula but you don't need to write a formal proof. \n",
+    "### Exercise B.1\n",
     "\n",
-    "Take a picture of your Venn diagram and save it somewhere where you can find it again.\n",
+    "Draw a Venn diagram with *3* intersecting sets $A$, $B$, and $C$. Label each region of the diagram. Use your Venn diagram to conjecture an inclusion-exclusion formula for the expression $\\lvert A \\cup B \\cup C\\rvert$. You should explain your formula but you don't need to write a formal proof. \n",
+    "\n",
+    "Take a picture of your Venn diagram and your whiteboard explanation and save it somewhere where you can find it again.\n",
     "\n",
     "### (*After Lab*)\n",
     "\n",
@@ -71,14 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[An image of your Venn Diagram]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Your explanation]"
+    "[*YOUR ANSWER HERE: An image of your Venn diagram (with explanation) followed by a carefully-written typped explanation. Your image show show your whiteboard explanation, but please edit and type your explanation here after the lab period.*]"
    ]
   },
   {
@@ -92,9 +112,16 @@
     "$\\lvert A \\cup B \\cup C\\rvert = \\lvert A \\cup D\\rvert\\;.$\n",
     "\n",
     "- First, apply the two-set inclusion-exclusion formula to the righthand side of this expression. \n",
-    "- Then, apply the two-set inclusion exclusion formula *again* to simplify the expressions that result. \n",
+    "- Then, apply the two-set inclusion exclusion formula *again* to simplify the expressions that result. You may need to do this several times times. \n",
+    "- During this process, you will  find it useful to use one of the *distributive laws*: \n",
     "\n",
-    "Write your derivation (a computation leading to the desired formula) on the whiteboard. It would be good idea to take a picture of it once you're done. \n",
+    "$$\n",
+    "A \\cap (B \\cup C) = (A \\cap B) \\cup (A \\cap C)\n",
+    "$$\n",
+    "\n",
+    "### Exercise C.1\n",
+    "\n",
+    "Following this strategy write a derivation (a computation leading to the desired formula) **on the whiteboard**. Justify each of your steps by citing a formula or identity that we have introduced in the course so far. Take a picture of your derivation once you're done. \n",
     "\n",
     "### (*After Lab*)\n",
     " \n",
@@ -112,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Your derivation here.]"
+    "[*YOUR ANSWER HERE: An image of your work on the whiteboard, followed by a carefully-typed derivation using mathematical symbols as appropriate.*]"
    ]
   },
   {
@@ -121,6 +148,8 @@
    "source": [
     "## Part D \n",
     "\n",
+    "*You should run each of the Python cells in this part, including the ones that don't require you to write any new code*. \n",
+    "\n",
     "Now let's test our mathematical theory against computational experiments. \n",
     "\n",
     "The following function will compute the size of a union of any number of provided sets. "
@@ -128,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +183,7 @@
        "6"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -228,6 +257,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exercise D.1\n",
+    "\n",
     "Modify this the `ie_union_size` function so that it correctly computes the size of the union of the input sets using the inclusion-exclusion formula. Your solution should ensure that `ie_union_size` returns the correct result whenever it is passed either 2 or 3 arguments. Show checks using the sets `A`, `B`, and `C` above to show that your function works in these cases. \n",
     "\n",
     "**Specifications**: \n",
@@ -246,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,6 +314,8 @@
     "## Part E (optional for **M**, required for **E**)\n",
     "\n",
     "*You can skip this problem if you are satisfied with an M on this lab report. If you are aiming for an E, please complete it.*\n",
+    "\n",
+    "### Exercise E.1\n",
     "\n",
     "Show a test of your implementation of `ie_union_size` against `union_size` when passed 4 and 5 arguments. If the two functions do not agree, modify `union_size` until they do agree. \n",
     "\n",
@@ -332,6 +365,13 @@
     "5. What's something you found interesting, stimulating, or fun about this lab?\n",
     "6. What's something you found challenging, disappointing, or frustrating about this lab?\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[*Your reflection here*]"
+   ]
   }
  ],
  "metadata": {
@@ -350,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
