--- a/content/modules/10-logic-1/prep.qmd
+++ b/content/modules/10-logic-1/prep.qmd
@@ -25,7 +25,7 @@ title: "Preparation: Logical Statements and Truth Tables"
 
 # Warmup Problems (~30 mins) 
 
-*Please complete these problems with a pencil/pen and paper. Then, scan/photograph your solutions and upload them to Canvas.* 
+*Please complete these problems "by hand," without typing. Pencil/pen and paper is best practice for the quiz, but using a stylus with a tablet is also fine. Then, scan/photograph or otherwise produce an image of your solutions and upload them to Canvas.*
 
 ### Problem 1
  
