--- a/docs/assignments/labs/02-inclusion-exclusion.ipynb
+++ b/docs/assignments/labs/02-inclusion-exclusion.ipynb
@@ -17,6 +17,10 @@
     "- [The name of one of your group members]\n",
     "- [The name of your other group member]\n",
     "\n",
+    "## Collaboration Statement\n",
+    "\n",
+    "[*Please describe the contributions of each group member. Please also describe the support you received from Course Assistants, other classmates, and any online resources such as StackExchange or ChatGPT.*]\n",
+    "\n",
     "**Learning Objectives**:\n",
     "\n",
     "- You will practice performing mathematical operations on sets, especially the cardinality of sets formed from other sets. \n",
