--- a/assignments/labs/03-proof-practice.ipynb
+++ b/assignments/labs/03-proof-practice.ipynb
@@ -97,7 +97,7 @@
     "Prove the following statement, using any proof method. There may be multiple good approaches. \n",
     "\n",
     "\n",
-    "**Claim**: For all $x\\in \\R$, \n",
+    "**Claim**: For all $x\\in \\mathbb{R}$, \n",
     "\n",
     "$$\n",
     "|x - 2| \\geq |x| - 2\\;.\n",
