--- a/docs/assignments/labs/03-proof-practice.ipynb
+++ b/docs/assignments/labs/03-proof-practice.ipynb
@@ -10,6 +10,10 @@
     "- [The name of one of your group members]\n",
     "- [The name of your other group member]\n",
     "\n",
+    "## Collaboration Statement\n",
+    "\n",
+    "[*Please describe the contributions of each group member. Please also describe the support you received from Course Assistants, other classmates, and any online resources such as StackExchange or ChatGPT.*]\n",
+    "\n",
     "**Learning Objectives**:\n",
     "\n",
     "- You will practice *assessing which proof technique* to use for a given problem. \n",
@@ -187,7 +191,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part F: Reflection\n",
+    "## Part F\n",
+    "\n",
+    "Please review the list of guidelines for mathematical writing in [Book of Proof Chapter 5.3](https://www.people.vcu.edu/~rhammack/BookOfProof/Main.pdf#page=145). Then, check carefully that each of your written proofs in the previous parts does not violate any of the items on this checklist. Revise if necessary before turning in your lab report. \n",
+    "\n",
+    "**Optional Suggestion**: trade your draft lab report with a group member or another student in the class. Ask them to identify places in which your lab report should be revised in order to align with the list of guidelines, and do the same for then. Then, each of you can revise in response to your feedback. If you do this with a peer, please name them in your collaboration statement at the beginning of this lab report. \n",
+    "\n",
+    "*You are likely to write better proofs this way, but it's not required.* "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part G: Reflection\n",
     "\n",
     "Write a paragraph in response to the following prompt: \n",
     "\n",
