--- a/assignments/labs/03-proof-practice.ipynb
+++ b/assignments/labs/03-proof-practice.ipynb
@@ -25,12 +25,11 @@
     "\n",
     "# General Instructions\n",
     "\n",
-    "During the lab period, **you should not be typing**. You can use your device to look at the lab instructions and for quick checks, but now is not the time for typing. Instead, you should work with your group at your board or on your mini-boards on the specified problems. \n",
+    "During the lab period, **you should not be typing**. You can use your device to look at the lab instructions and for quick checks, but now is not the time for typing. Instead, you should work with your group at your board. \n",
     "\n",
     "- Remember your group norms from Lab 1. \n",
-    "- Pass the marker often, *at minimum* twice in every Part. \n",
-    "- Every group member should take a picture before erasing anything. \n",
-    "- For problems that require you to submit an image of a whiteboard, if you are working on those problems after the lab period, it's also acceptable to submit a hand-drawn image on paper or a tablet. "
+    "- When writing proofs on the whiteboard, please pass the marker **after each sentence**.\n",
+    "- Every group member should take a picture before erasing anything. "
    ]
   },
   {
@@ -60,9 +59,7 @@
    "source": [
     "## Part A\n",
     "\n",
-    "Prove the following statement, using any proof method. There may be multiple good approaches. \n",
-    "\n",
-    "**Claim**: *$\\sqrt{10}$ is an irrational number.*"
+    "Prove that, if $x$ is a rational number and $y$ is an irrational number, then $x - y$ is an irrational number. "
    ]
   },
   {
@@ -76,27 +73,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part A The Sequel\n",
+    "## Part B\n",
     "\n",
-    "*Required for an E, optional for an M* \n",
+    "Prove the following statement: \n",
     "\n",
-    "Consider the claim that $\\sqrt{n}$ is an irrational number, where $n$ is some nonnegative integer. Describe the set of integers $n$ for which your proof strategy from Part A would work with only minimal modification. Write this set in set-builder notation. \n",
+    "**Claim**: For any integer $n$, $n$ is even *if and only if* $4 | (n^2 - 4n)$. \n",
     "\n",
-    "You do not need to rewrite the proof, although this might help you check your answer. \n"
+    "*Recall*: For integers $a$ and $b$, $a|b$ means that $a$ divides $b$ without remainder. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[*Your response here.*]"
+    "[*Your proof here, including your declaration of your proof technique.*]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part B \n",
+    "## Part C\n",
     "\n",
     "Prove the following statement, using any proof method. There may be multiple good approaches. \n",
     "\n",
@@ -111,8 +108,8 @@
     "\n",
     "$$\n",
     "|x| = \\begin{cases} \n",
-    "\\phantom{-}x& &\\quad x \\geq 0 \\\\ \n",
-    "-x& &\\quad x < 0\\;.\n",
+    "\\phantom{-}x &\\quad x \\geq 0 \\\\ \n",
+    "-x& \\quad x < 0\\;.\n",
     "\\end{cases}\n",
     "$$"
    ]
@@ -128,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part C\n",
+    "## Part D\n",
     "\n",
     "Prove the following statement: \n",
     "\n",
@@ -155,13 +152,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part D\n",
+    "## Part E\n",
     "\n",
-    "Prove the following statement: \n",
+    "**Claim**: For any real numbers $x$ and $y$, if $x < y$, then there exists a real number $x$ such that $x < z < y$. \n",
     "\n",
-    "**Claim**: For any integer $n$, $n$ is even *if and only if* $4 | (n^2 - 4n)$. \n",
+    "**Note**: to complete this part, you may consider using a new technique called *proof by construction*. Proof by construction is used for existence proofs. To complete a proof by construction, assume that $x < y$ and then *construct* a $z$ that has the desired property in terms of $x$ and $y$. \n",
     "\n",
-    "*Recall*: For integers $a$ and $b$, $a|b$ means that $a$ divides $b$ without remainder. "
+    "**Hint**: Try the midpoint of $x$ and $y$. "
    ]
   },
   {
@@ -175,23 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part E \n",
-    "\n",
-    "**Claim**: For any real numbers $x$ and $y$, if $x < y$, then there exists a real number $x$ such that $x < z < y$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[*Your proof here, including your declaration of your proof technique.*]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part F\n",
+    "## Part G\n",
     "\n",
     "Please review the list of guidelines for mathematical writing in [Book of Proof Chapter 5.3](https://www.people.vcu.edu/~rhammack/BookOfProof/Main.pdf#page=145). Then, check carefully that each of your written proofs in the previous parts does not violate any of the items on this checklist. Revise if necessary before turning in your lab report. \n",
     "\n",
