various updates to induction content

--- a/content/modules/24-more-induction/prep.ipynb
+++ b/content/modules/24-more-induction/prep.ipynb
@@ -8,7 +8,7 @@
         "title: \"More Induction\"\n",
         "---"
       ],
-      "id": "e2283bab"
+      "id": "8aceb46c"
     },
     {
       "cell_type": "markdown",
@@ -27,81 +27,29 @@
         "\n",
         "### Problem 1\n",
         "\n",
-        "<!-- DMOI 2.22 -->\n",
+        "You and your friend are playing the following (fun!) game. There are two piles of apples. The first player removes some positive integer number of apples from one of the piles. Then, the second player also removes some number of apples from one of the piles. Each player can remove any number of apples from *one* of the two piles, but cannot take apples from both piles simultaneously. \n",
         "\n",
-        "Use strong induction to prove the following statement: \n",
+        "The players alternate until one of them removes the very last apple (from either pile). That player, who removes the very last apple, wins. \n",
         "\n",
-        "**Proposition**: Suppose that $x\\in \\mathbb{R}$ is some real number with the property that $x + \\frac{1}{x}$ is an integer. Then, for any $n \\geq 1$, the number \n",
+        "You deviously encourage your friend to go first. Then, you use a simple copycat strategy: whenever your friend removes $j$ apples from one pile, you always remove the same number $j$ apples from the second pile. \n",
         "\n",
-        "$$\n",
-        "\\begin{aligned}\n",
-        "    x^n + \\frac{1}{x^n}\n",
-        "\\end{aligned}\n",
-        "$$\n",
+        "Prove the following statement using strong induction: \n",
         "\n",
-        "is also an integer. \n",
+        "**Proposition**: *If at the beginning of the game the two piles contain the same number of apples, then you (the second player) always win using your copycat strategy.* \n",
         "\n",
-        "::: {.content-visible when-meta=\"solution\"}\n",
+        "\n",
+        "::: {.content-visible when-meta='solution'}\n",
         "::: {.callout-note}\n",
         "\n",
-        "**Base case**. Let $n = 1$. Then, $x^1 + \\frac{1}{x^1} = x + \\frac{1}{x}$, which we already know to be an integer by our assumption about $x$. \n",
+        "We'll use strong induction on the number of apples in each pile. Suppose that each pile contains $n$ apples. \n",
         "\n",
-        "**Inductive step**. Suppose that the statement is true for all positive integers up to and including $n$. Let's show that this implies that it is true for $n+1$. A useful start here is just to do the multiplication \n",
+        "**Base case**: suppose that $n=1$. Then, your friend (the first player) must remove an apple from one of the piles. You remove the other apple from the other pile. This is the last apple, so you win! \n",
         "\n",
-        "$$\n",
-        "\\begin{aligned}\n",
-        "    \\left( x^{n} + \\frac{1}{x^{n}} \\right)\\left(x + \\frac{1}{x} \\right) &= x^{n+1} + \\frac{1}{x^{n-1}} + x^{n-1} + \\frac{1}{x^{n+1}} \\\\  \n",
-        "    &= \\left(x^{n+1} + \\frac{1}{x^{n+1}}\\right) + \\left(x^{n-1} + \\frac{1}{x^{n-1}}  \\right)\n",
-        "\\end{aligned}\n",
-        "$$\n",
-        "\n",
-        "Therefore, for our main calculation we can write \n",
-        "\n",
-        "$$\n",
-        "\\begin{aligned}\n",
-        "    x^{n+1} + \\frac{1}{x^{n+1}} &= \\left(x^{n+1} + \\frac{1}{x^{n+1}}\\right) + \\left(x^{n-1} + \\frac{1}{x^{n-1}}  \\right) - \\left(x^{n-1} + \\frac{1}{x^{n-1}}  \\right) \\\\ \n",
-        "    &= \\left( x^{n} + \\frac{1}{x^{n}} \\right) \\left(x + \\frac{1}{x} \\right) - \\left(x^{n-1} + \\frac{1}{x^{n-1}}  \\right)\\;.\n",
-        "\\end{aligned}\n",
-        "$$\n",
-        "\n",
-        "In our strong inductive hypothesis, we assumed that $x^{k} + \\frac{1}{x^{k}}$ is an integer for any positive integer $k$ up to and including $n$. In particular, this assumption implies that both $\\left( x^{n} + \\frac{1}{x^{n}} \\right)$ and $\\left(x^{n-1} + \\frac{1}{x^{n-1}}  \\right)$ are integers. We also know that $\\left(x + \\frac{1}{x} \\right)$ is an integer by our original hypothesis. Therefore, this entire expression is just integers multiplied and subtracted from other integers, and is therefore an integer itself. This completes the proof. \n",
-        "\n",
+        "**Strong inductive step**: suppose that the statement is true for all $n \\leq k$. We'll show that this implies that the statement is true for $n = k+1$. The first player must remove some number of apples (let's say $j$) from one of the piles. You then use your copycat strategy to remove $j$ apples from the other pile. Each pile now contains $k-j+1$ apples. Now it's as though we're beginning a new game with each pile containing $k - j + 1$ apples. But since $j\\geq 1$, $k-j+1 \\leq k$, so your copycat strategy will win in this new game too. This completes the strong inductive step. Therefore, your copycat strategy always wins.  \n",
         "\n",
         ":::\n",
         ":::\n",
         "\n",
-        "#### Optional Challenge \n",
-        "\n",
-        "*(not required)*\n",
-        "\n",
-        "In the problem, we assumed that $x + \\frac{1}{x}$ was an integer. Call this integer $h$. So, we have assumed that $x + \\frac{1}{x} = h$. \n",
-        "\n",
-        "1. What is required of $h$ in order to guarantee that this equation indeed has a real solution in $x$? \n",
-        "2. Suppose that this equation has at least one real solution in $x$. How many possible solutions in $x$ are there? \n",
-        "\n",
-        "::: {.content-visible when-meta=\"solution\"}\n",
-        "::: {.callout-note}\n",
-        "\n",
-        "We can rewrite the equation $x + \\frac{1}{x} = h$ as \n",
-        "\n",
-        "$$\n",
-        "\\begin{aligned}\n",
-        "    x^2 - hx + 1 = 0\\;.\n",
-        "\\end{aligned}\n",
-        "$$\n",
-        "\n",
-        "Using the quadratic formulat, the solutions in $x$ are \n",
-        "\n",
-        "$$\n",
-        "\\begin{aligned}\n",
-        "    x = \\frac{h \\pm \\sqrt{h^2 - 4}}{2}\n",
-        "\\end{aligned}\n",
-        "$$\n",
-        "\n",
-        "There are two real solutions for $x$ if and only if $|h| \\geq 2$. \n",
-        "\n",
-        ":::\n",
-        ":::\n",
         "\n",
         "\n",
         " \n",
@@ -109,9 +57,9 @@
         "\n",
         "#### Motivation\n",
         "\n",
-        "In computer science, we often use induction to prove the correctness of a function that we or someone else has written. This is sometimes called \"proving a function.\" For example, consider the Python function below, which reverses an input string using recursion.  "
+        "In computer science, we often use induction to prove the correctness of a function -- that is, we prove formally that the function does what it is supposed to do. This is sometimes called \"proving a function.\" For example, consider the Python function below, which reverses an input string using recursion.  "
       ],
-      "id": "feb1f922"
+      "id": "89343149"
     },
     {
       "cell_type": "code",
@@ -132,7 +80,7 @@
         "    else:\n",
         "        return reverse_string(s[1:]) + s[0]"
       ],
-      "id": "160eefbb",
+      "id": "d22025a7",
       "execution_count": null,
       "outputs": []
     },
@@ -142,7 +90,7 @@
       "source": [
         "Here it is in action.  "
       ],
-      "id": "56fab2a4"
+      "id": "18369d80"
     },
     {
       "cell_type": "code",
@@ -150,7 +98,7 @@
       "source": [
         "reverse_string(\"CSCI 0200\")"
       ],
-      "id": "ccb0d2e5",
+      "id": "14300de0",
       "execution_count": null,
       "outputs": []
     },
@@ -166,7 +114,7 @@
         "\n",
         "Now we can state the thing we want to prove: \n",
         "\n",
-        "**Claim**: For any $n \\in \\mathbb{N}$, the result of calling the function `reverse_string` on the string $s_1s_2s_3\\cdots s_{n-2}s_{n-1}s_n$ is the reversal of $s$, that is, the string $s_ns_{n-1}s_{n-2}\\cdots s_3s_2s_1$. \n",
+        "**Proposition**: For any $n \\in \\mathbb{N}$, the result of calling the function `reverse_string` on the string $s_1s_2s_3\\cdots s_{n-2}s_{n-1}s_n$ is the reversal of $s$, that is, the string $s_ns_{n-1}s_{n-2}\\cdots s_3s_2s_1$. \n",
         "\n",
         "Prove this claim using induction. \n",
         "\n",
@@ -183,8 +131,8 @@
         "\n",
         "$$\n",
         "\\begin{aligned}\n",
-        "    f(s_1s_2s_3\\cdots s_{n-2}s_{n-1}s_{n}s_{n+1}) &= f(s_2s_3\\cdots s_{n-2}s_{n-1}s_{n}s_{n+1})s_1 \\text{(second two lines of $f$)}\\\\ \n",
-        "    &= s_{n+1}s_ns_{n-1}s_{n-2}\\cdots s_3s_2s_1 \\text{(inductive step)}\n",
+        "    f(s_1s_2s_3\\cdots s_{n-2}s_{n-1}s_{n}s_{n+1}) &= f(s_2s_3\\cdots s_{n-2}s_{n-1}s_{n}s_{n+1})s_1 &\\text{(second two lines of $f$)}\\\\ \n",
+        "    &= s_{n+1}s_ns_{n-1}s_{n-2}\\cdots s_3s_2s_1 & \\text{(inductive step)}\n",
         "\\end{aligned}\n",
         "$$\n",
         "\n",
@@ -194,7 +142,7 @@
         ":::\n",
         ":::\n"
       ],
-      "id": "1ad48f79"
+      "id": "819e6672"
     }
   ],
   "metadata": {
