--- a/docs/assignments/labs/03-proof-practice.ipynb
+++ b/docs/assignments/labs/03-proof-practice.ipynb
@@ -29,13 +29,8 @@
     "\n",
     "- Remember your group norms from Lab 1. \n",
     "- When writing proofs on the whiteboard, please pass the marker **after each sentence**.\n",
-    "- Every group member should take a picture before erasing anything. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Every group member should take a picture before erasing anything. \n",
+    "\n",
     "## For This Lab \n",
     "\n",
     "This is a lab in which you will practice choosing the correct proof technique for a given problem. By now, we have learned several proof techniques: \n",
@@ -50,14 +45,18 @@
     "\n",
     "- **We will prove the claim using the element method**. Let $x \\in A$...\n",
     "- **We will prove the claim by division into cases**. Suppose first that $x$ is negative...\n",
-    "- **We will prove the claim by contradiction**. Suppose therefore that \\[thing to be proven\\] is *not* true. Then..."
+    "- **We will prove the claim by contradiction**. Suppose therefore that \\[thing to be proven\\] is *not* true. Then...\n",
+    "\n",
+    "## How Many Proofs? \n",
+    "\n",
+    "There are a total of 5 problems on this lab. For an **M**, it is sufficient to submit high quality for **4** of them. For an **E**, please submit all 5. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part A\n",
+    "# Part A\n",
     "\n",
     "Prove that, if $x$ is a rational number and $y$ is an irrational number, then $x - y$ is an irrational number. "
    ]
@@ -73,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part B\n",
+    "# Part B\n",
     "\n",
     "Prove the following statement: \n",
     "\n",
@@ -93,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part C\n",
+    "# Part C\n",
     "\n",
     "Prove the following statement, using any proof method. There may be multiple good approaches. \n",
     "\n",
@@ -125,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part D\n",
+    "# Part D\n",
     "\n",
     "Prove the following statement: \n",
     "\n",
@@ -138,7 +137,9 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "*Note*: mathematically, this says that a circle of radius 1 (the set $A$) can be contained inside a square of side-length 2 (the set $B$). "
+    "Then, $A \\subseteq B$. \n",
+    "\n",
+    "*Note*: geometrically, this says that a circle of radius 1 (the set $A$) can be contained inside a square of side-length 2 (the set $B$). "
    ]
   },
   {
@@ -152,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part E\n",
+    "# Part E\n",
     "\n",
     "**Claim**: For any real numbers $x$ and $y$, if $x < y$, then there exists a real number $x$ such that $x < z < y$. \n",
     "\n",
@@ -172,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part G\n",
+    "# Part F\n",
     "\n",
     "Please review the list of guidelines for mathematical writing in [Book of Proof Chapter 5.3](https://www.people.vcu.edu/~rhammack/BookOfProof/Main.pdf#page=145). Then, check carefully that each of your written proofs in the previous parts does not violate any of the items on this checklist. Revise if necessary before turning in your lab report. \n",
     "\n",
