various course prep

--- a/assets/partials/before-body.tex
+++ b/assets/partials/before-body.tex
@@ -29,6 +29,8 @@ $else$
 
 Signature: \bigblank\\
 
+\textbf{Before starting the exam, please write down which learning targets you have already completed. You should not attempt any questions for learning targets you have already completed.}
+
 
 This quiz is closed book, closed notes, closed computer, closed calculator,
 etc. 
