--- a/docs/assignments/labs/02-inclusion-exclusion.ipynb
+++ b/docs/assignments/labs/02-inclusion-exclusion.ipynb
@@ -57,32 +57,14 @@
     "\n",
     "### (*After Lab*)\n",
     "\n",
-    "Upload your image in this notebook. Then, give a carefully edited, typed version of your explanation, using mathematical symbols as appropriate.  \n"
+    "Based on your whiteboard work, give a carefully edited, typed version of your explanation, using mathematical symbols as appropriate.  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[*YOUR ANSWER HERE: An image of your Venn Diagram followed by a carefully-written explanation. Your image show show your whiteboard explanation, but please edit and type your explanation here after the lab period.*]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise A.2\n",
-    "\n",
-    "Suppose that $U$ is the universal set, that $U$ is finite, and that $\\lvert U \\rvert = m$. Find a formula for $\\lvert\\bar{A} \\cap \\bar{B}\\rvert$ that uses the inclusion-exclusion formula. Your final formula **should not involve any set complement symbols like $\\bar{A}$. Write your derivation on the whiteboard and take a picture. \n",
-    "\n",
-    "*Hint*: There are several approaches. One way is to draw another Venn diagram that will allow you to convert $\\bar{A} \\cap \\bar{B}$ into an expression involving a union $\\cup$. Another way is to rearrange the terms of the inclusion-exclusion formula.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*[YOUR ANSWER HERE: An image of your derivation on the whiteboard. Then, a carefully-written, typed derivation using mathematical symbols as needed.]*"
+    "[*YOUR ANSWER HERE: a carefully-written explanation of your argument*] "
    ]
   },
   {
@@ -106,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[*YOUR ANSWER HERE: An image of your Venn diagram (with explanation) followed by a carefully-written typped explanation. Your image show show your whiteboard explanation, but please edit and type your explanation here after the lab period.*]"
+    "[*YOUR ANSWER HERE: A carefully-written typed explanation of your argument using Venn diagrams. It's ok if your argument is a little difficult to write without a picture -- just do your best.*]"
    ]
   },
   {
@@ -137,8 +119,8 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "x &= y \\\\ \n",
-    "  & = z\\;. \n",
+    "x &= y  &\\text{(a justification)}\\\\ \n",
+    "  & = z &\\text{(another justification)}\\;. \n",
     "\\end{aligned}\n",
     "$$"
    ]
@@ -147,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[*YOUR ANSWER HERE: An image of your work on the whiteboard, followed by a carefully-typed derivation using mathematical symbols as appropriate.*]"
+    "[*YOUR ANSWER HERE: A carefully-typed derivation using mathematical symbols as appropriate, as well as justifications for each step.*]"
    ]
   },
   {
@@ -280,7 +262,8 @@
     "\n",
     "- You should add to the variable `union_size` using the syntax `union_size += value_to_add`. \n",
     "- It's possible to solve this problem by replacing the `print` statement with a single careful line of code (under 80 characters), but it's also ok to use more lines. \n",
-    "- When `sets` is a tuple of sets, the syntax `sets[0].intersection(*sets[1:])` will compute the intersection of all the elements of `sets`. "
+    "- When `sets` is a tuple of sets, the syntax `sets[0].intersection(*sets[1:])` will compute the intersection of all the elements of `sets`. \n",
+    "- You'll need to do something with the *signs* of the cardinalities of sets. It's helpful to look at the number of sets involved. For example, $|A|$ will appear with a $+$ sign but $|A\\cap B|$ will appear with a $-$ sign. What about $|A\\cap B \\cap C|$? What pattern fo you observe?"
    ]
   },
   {
@@ -300,7 +283,7 @@
     "            # some sets. Throughout the loop, all possible combinations of sets\n",
     "            # appear in this tuple. \n",
     "            \n",
-    "            # to complete this part, you only need to replace the print statement below with some of your own code. Nothing else needs to be touched. \n",
+    "            # to complete this part, you only need to replace the print statement below with some of your own code that modifies the union_size variable. Nothing else needs to be touched. \n",
     "            print(sets)\n",
     "    return union_size        "
    ]
@@ -311,8 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# please add some checks to show that your solution agrees with union_size when passed either 2 or 3 sets. \n",
-    "\n"
+    "# please add some checks to show that your solution agrees with union_size when passed either 2 or 3 sets. \n"
    ]
   },
   {
@@ -398,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
