--- a/pages/learning-targets.qmd
+++ b/pages/learning-targets.qmd
@@ -12,7 +12,7 @@ title: Learning Targets
 
 **Proofs **
 
-- **PF1**: I can use proof-by-contradiction to prove mathematical statements. 
+- **PF1**: I can use direct proof, proof by cases, and proof-by-contradiction to prove mathematical statements. 
 - **PF2**: I can choose between weak and strong induction and write correct inductive proofs that include both a base case and an inductive step. 
 
 **Functions and Relations**
